--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>subha mondal</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo repellendus voluptatum adipisci amet at sapiente atque ab, voluptas modi inventore quas in alias consequatur ducimus architecto quod odit! Quasi aut minus eligendi tenetur fuga.</p>
-    <p> subha mondal </P>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, dicta ipsa, excepturi voluptas laborum maxime in hic perspiciatis nam sint itaque tempora! Molestias expedita quidem modi unde consequuntur eum error praesentium dolorem provident, iusto repellendus ullam a ipsum illum? Totam, reprehenderit quidem consequatur porro hic perferendis nulla vitae atque eum!</p>
 </body>
 </html>
